--- a/macros.twig
+++ b/macros.twig
@@ -86,18 +86,10 @@
         {% set src1x = image|resize(targetWidth, targetHeight) %}
         {% set src2x = image|resize(targetWidth * 2, targetHeight is not null ? targetHeight * 2 : null) %}
 
-        {% set srcsetParts = [] %}
-        {% if config.avif %}
-            {% set srcsetParts = srcsetParts|merge([src1x|toavif ~ ' 1x', src2x|toavif ~ ' 2x']) %}
-        {% endif %}
-        {% if config.webp %}
-            {% set srcsetParts = srcsetParts|merge([src1x|towebp ~ ' 1x', src2x|towebp ~ ' 2x']) %}
-        {% endif %}
-        {% set srcsetParts = srcsetParts|merge([src1x ~ ' 1x', src2x ~ ' 2x']) %}
-
         {% set pictureSources = pictureSources|merge([{
             'media': source.media,
-            'srcset': srcsetParts|join(', ')
+            'src1x': src1x,
+            'src2x': src2x
         }]) %}
     {% endfor %}
 
@@ -106,9 +98,26 @@
     {% set baseHeight = baseSize[1] is defined ? baseSize[1] : null %}
 
     <picture class="picture {{ config.pictureClass }}">
+        {# AVIF sources - one per breakpoint #}
+        {% if config.avif %}
+            {% for source in pictureSources %}
+                <source {% if source.media %}media="{{ source.media }}" {% endif %}srcset="{{ source.src1x|toavif }} 1x, {{ source.src2x|toavif }} 2x" type="image/avif"/>
+            {% endfor %}
+        {% endif %}
+
+        {# WebP sources - one per breakpoint #}
+        {% if config.webp %}
+            {% for source in pictureSources %}
+                <source {% if source.media %}media="{{ source.media }}" {% endif %}srcset="{{ source.src1x|towebp }} 1x, {{ source.src2x|towebp }} 2x" type="image/webp"/>
+            {% endfor %}
+        {% endif %}
+
+        {# Original format sources - fallback #}
         {% for source in pictureSources %}
-            <source {% if source.media %}media="{{ source.media }}" {% endif %}srcset="{{ source.srcset }}"/>
+            <source {% if source.media %}media="{{ source.media }}" {% endif %}srcset="{{ source.src1x }} 1x, {{ source.src2x }} 2x"/>
         {% endfor %}
+
+        {# Fallback img tag #}
         <img {% if config.imgClass %} class="{{ config.imgClass }}" {% endif %} src="{{ image|resize(baseWidth, baseHeight) }}" {% if image.title %} alt="{{ image.title }}" {% endif %} {% if config.loading %} loading="{{ config.loading }}" {% endif %} {% if config.decoding %} decoding="{{ config.decoding }}" {% endif %} width="{{ baseWidth }}" {% if baseHeight %} height="{{ baseHeight }}" {% endif %}/>
     </picture>
     {% endif %}
